@@ -2,48 +2,49 @@ package pro.sky2.Spring;
 
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @Service
 public class EmployeeService {
     private final int MaxEmploees = 10;
-    private final List<Employee> employees = new ArrayList<>();
+    private final Map<String, Employee> employees = new HashMap();
 
     public Employee add(String firstName, String lastName) {
-        Employee employee = new Employee(firstName, lastName);
-        if(employees.contains(employee)){
+        String key = buildkey(firstName, lastName);
+        if(employees.containsKey(key)){
             throw new EmployeeAlreadyAddedException();
         }
         if (employees.size() > MaxEmploees) {
             throw new EmployeeStorageIsFullException();
         }
-        employees.add(employee);
+        Employee employee = new Employee(firstName, lastName);
+        employees.put(key, employee);
         return employee;
     }
 
 
     public Employee remove(String firstName, String lastName) {
-        Employee employee = new Employee(firstName, lastName);
-        if(!employees.contains(employee)){
+        String key = buildkey(firstName, lastName);
+        if(!employees.containsKey(key)){
             throw new EmployeeNotFoundException();
         }
-        employees.remove(employee);
-        return employee;
+        return employees.remove(key);
     }
 
 
     public Employee find(String firstName, String lastName) {
-        Employee employee = new Employee(firstName, lastName);
-        if(!employees.contains(employee)){
+        String key = buildkey(firstName, lastName);
+        if(!employees.containsKey(key)){
             throw new EmployeeNotFoundException();
         }
-        return employee;
+        return employees.get(key);
+    }
+
+    private String buildkey(String firstName, String lastName) {
+        return firstName + lastName;
     }
     public List<Employee> findAll() {
-        return Collections.unmodifiableList(employees);
+        return List.copyOf(employees.values());
     }
 
 }
